add install docker

--- a/.env-example.yml
+++ b/.env-example.yml
@@ -3,7 +3,7 @@
 ip: "192.168.33.10"
 memory: 1024
 
-#
+# for common
 devops_env: development
 workspace_path: /home/ubuntu
 iac_path: iac
@@ -12,3 +12,8 @@ iac_path: iac
 folders:
   - from: ~/home/phoenix
     to: sites/phoenix
+
+# for install docker
+linux_codename: xenial # use `lsb_release -cs` to query codename
+docker_ce_version: 17.03.1~ce-0~ubuntu-xenial
+docker_compose_version: 1.13.0
