--- a/.env-example.yml
+++ b/.env-example.yml
@@ -13,6 +13,10 @@ folders:
   - from: ~/home/phoenix
     to: sites/phoenix
 
+sites:
+  - server_name: phoenix.dev
+    document_root: phoenix/public
+
 # for install docker
 linux_codename: xenial # use `lsb_release -cs` to query codename
 docker_ce_version: 17.03.1~ce-0~ubuntu-xenial
