--- a/.env-example.yml
+++ b/.env-example.yml
@@ -17,6 +17,10 @@ sites:
   - server_name: phoenix.dev
     document_root: phoenix/public
 
+databases:
+  - name: phoenix
+    user: phoenix
+
 # for install docker
 linux_codename: xenial # use `lsb_release -cs` to query codename
 docker_ce_version: 17.03.1~ce-0~ubuntu-xenial
